# hermes

./: .gitignore  AGENTS.md  Cargo.toml  README.md  components.json  index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
packaging/arch/: README.md
packaging/arch/hermes-cli/: .SRCINFO  PKGBUILD
packaging/arch/hermes-cli-bin/: .SRCINFO  PKGBUILD
packaging/arch/hermes-desktop/: .SRCINFO  PKGBUILD  hermes-desktop.desktop
packaging/arch/hermes-desktop-bin/: .SRCINFO  PKGBUILD
scripts/: benchmark_vs_hyprwhspr.sh  check-release-metadata.sh  package-release-assets.sh
src/: app.rs  audio.rs  backend.rs  config.rs  credentials.rs  feedback.rs  hotkeys.rs  ipc.rs  lib.rs  longform.rs  main.rs  overlay.rs  paths.rs  realtime.rs  service.rs  text_injector.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-web/: App.tsx  globals.css  hermes.ts
support/: faster_whisper_runner.py
