[package]
name = "hermes"
version = "0.1.2"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
arboard = "3.6.1"
base64 = "0.22.1"
clap = { version = "4.5.50", features = ["derive"] }
cpal = "0.17.3"
ctrlc = "3.5.0"
directories = "6.0.0"
eframe = { version = "0.33.0", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
enigo = { version = "0.6.1", features = ["wayland"] }
futures-util = "0.3.31"
global-hotkey = "0.7.0"
hound = "3.5.1"
keyring = "4.0.0-rc.3"
keyring-core = "0.7.2"
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "multipart", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "sync", "time"] }
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-webpki-roots"] }
whisper-rs = "0.16.0"
winit = { version = "0.30.13", features = ["x11", "wayland"] }

[target.'cfg(target_os = "linux")'.dependencies]
evdev = "0.13.2"

[patch.crates-io]
keyring = { path = "vendor/keyring" }
