[package]
name = "hermes-desktop"
version = "0.1.0"
description = "Hermes desktop application"
authors = ["Aditya"]
license = ""
repository = ""
edition = "2024"
rust-version = "1.92.0"

[lib]
name = "hermes_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
anyhow = "1.0.100"
hermes = { path = ".." }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.10.3", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-log = "2"
tauri-plugin-updater = "2"
